--- a/ascon_mobile/android/app/src/main/res/drawable/launch_background.xml
+++ b/ascon_mobile/android/app/src/main/res/drawable/launch_background.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@android:color/white" />
+    <item>
+        <color android:color="#1B5E3A"/>
+    </item>
 
-    <!-- You can insert your own image assets here -->
-    <!-- <item>
-        <bitmap
-            android:gravity="center"
-            android:src="@mipmap/launch_image" />
-    </item> -->
+    <item
+        android:width="192dp"
+        android:height="192dp"
+        android:gravity="center">
+        
+        <bitmap 
+            android:src="@drawable/logo_centered" 
+            android:gravity="fill" 
+            android:filter="true" />
+    </item>
 </layer-list>
