--- a/ascon_mobile/android/app/src/main/res/values-v31/styles.xml
+++ b/ascon_mobile/android/app/src/main/res/values-v31/styles.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="LaunchTheme" parent="Theme.SplashScreen">
-        <item name="android:windowSplashScreenBackground">#1B5E3A</item>
-        
-        <item name="android:windowSplashScreenAnimatedIcon">@drawable/launch_background</item>
-        
-        <item name="android:windowSplashScreenIconBackgroundColor">#1B5E3A</item>
-        <item name="postSplashScreenTheme">@style/NormalTheme</item>
+    <style name="LaunchTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowSplashScreenBackground">@android:color/white</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@mipmap/launcher_icon</item>
+        <item name="android:windowSplashScreenIconBackgroundColor">@android:color/white</item>
     </style>
 </resources>
