--- a/ascon_mobile/android/app/src/main/res/values/colors.xml
+++ b/ascon_mobile/android/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     
     <color name="brand_color">#1B5E3A</color>
     <color name="primary_green">#1B5E3A</color>
+    <color name="ascon_green">#FFFFFF</color>
 </resources>
